--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ a {
 	text-decoration: none;
 }
 
+tr {
+	vertical-align: middle;
+}
+
 /**************** cms.php ****************/
 
 .itemSepSameFeed {
@@ -123,11 +127,19 @@ a {
 	position: relative;
 	margin: 0 auto;
 	padding-top: 32px;
+
+	font-size: 18px;
+}
+
+.cellSep {
+	border-top: solid thin;
+	border-color: #a0a0a0;
 }
 
 .cellTitle {
 	float: left;
-	font-size: 18px;
+	font-weight: bold;
+	font-size: 16px;
 	padding-top: 8px;
 }
 
