Getting ready for multiple columns

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 480px) {
-	body { max-width: 480px; }
+	body { max-width: 512px; }
 }
 
 body {
@@ -7,6 +7,7 @@ body {
 	margin: 0 auto;
 	background-color: #fffff8;
 	font-family: "Archivo Narrow";
+	font-size: 11pt;
 	text-decoration: none;
 }
 
@@ -21,8 +22,29 @@ nav span {
 }
 
 /* index.php */
-.itemSep {
+#content {
+	clear: left;
 	margin-top: 16px;
+}
+
+#content-left {
+	float: left;
+	width: 31%;
+}
+
+#content-middle {
+	float: left;
+	width: 31%;
+	margin-left: 3.5%;
+}
+
+#content-right {
+	float: left;
+	width: 31%;
+	margin-left: 3.5%;
+}
+
+.itemSep {
 	border-top: solid thin #c0c0c0;
 }
 
@@ -43,10 +65,11 @@ nav span {
 .itemPubDate {
 	float: right;
 	margin-top: 4px;
-	margin-left: 4px;
+	margin-left: 8px;
 	font-size: smaller;
 	font-style: normal;
 	font-weight: normal;
+	color: #317023;
 }
 
 .itemTitle {
@@ -58,6 +81,7 @@ nav span {
 
 .itemDesc {
 	clear: left;
+	margin-bottom: 16px;
 	font-family: "Times";
 	font-style: normal;
 	font-weight: normal;
